# pdf-creator

./: CMakeLists.txt  README.md  adddialog.cpp  adddialog.h  adddialog.ui  confirmationdialog.cpp  confirmationdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdf.cpp  pdf.h
